Chrome video z-index fix.

--- a/style/site.css
+++ b/style/site.css
@@ -32,7 +32,9 @@ body
 	
 		main video
 		{
+			position: relative;
 			width: 100%;
+			z-index: -1;
 		}
 	
 	nav
